Pequeñas mejoras y caambios